tdf#95189: docx import: apply list ovverride only once

List overrides should be applied only once on first list with
override appearance in document. Next reference to this list
should not override again and reset list numbering.

Change-Id: I7a24398d5980ca97a74fa8ad09d91ac9adff15ca
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93894
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>